volexc/tests/ui/service_duplicate_method.out
Error: duplicate method `bar` in service `Foo`
   ╭─[ service_duplicate_method.vol:7:8 ]
   │
 7 │     fn bar(Request) -> Response = 1;
   │        ─┬─  
   │         ╰─── first defined here
 8 │     fn bar(Request) -> Response = 2;
   │        ─┬─  
   │         ╰─── redefined here
───╯